Changes to be committed:

--- a/Policy & Value iteration/gambler.ipynb
+++ b/Policy & Value iteration/gambler.ipynb
@@ -156,7 +156,7 @@
     "    return values\n",
     "\n",
     "def policy_improvement(states, policy, values):\n",
-    "    better_policy = policy\n",
+    "    better_policy = copy.deepcopy(policy)\n",
     "    for state in states:\n",
     "        P = transition_prob(state)\n",
     "        better_policy[state] = np.argmax(np.dot(values + r, P))\n",
