Changes to be committed:

--- a/Policy & Value iteration/jack_rental.ipynb
+++ b/Policy & Value iteration/jack_rental.ipynb
@@ -17,10 +17,11 @@
    "metadata": {},
    "source": [
     "## Solution: \n",
-    "*Optimisation*: This approach is incredibly fast with the following optimisation approach:\n",
+    "*Optimisation*: This approach is incredibly fast (about 3.3s) with the following optimisation approach:\n",
     "1. Cache transition probabilities for two stores, and the expected rewards to avoid repeated computation.\n",
     "2. Use numpy matrix to represent transtional probability matrix.\n",
-    "3. Use numpy iterator for faster iterating over matrix. "
+    "3. Use numpy iterator for faster iterating over matrix. \n",
+    "4. We assume that bad actions are the one that move cars from one place to another such that the number of cars exceed 20 or less than 0."
    ]
   },
   {
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
