Changes to be committed:

--- a/Model-free control/code/policy_evaluation.ipynb
+++ b/Model-free control/code/policy_evaluation.ipynb
@@ -7,7 +7,15 @@
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
+    "import numpy as np\n",
     "def monte_carlo(policy, env, num_episodes, gamma, alpha):\n",
+    "    \"\"\"\n",
+    "    env: OpenAI Gym environment\n",
+    "    policy: Mapping from states to actions\n",
+    "    gamma: discount factor\n",
+    "    alpha: learning rate\n",
+    "    num_episodes: the number of episodes\n",
+    "    \"\"\"\n",
     "    V = defaultdict(int)\n",
     "    N = defaultdict(int)\n",
     "    for i in range(num_episodes):\n",
@@ -35,14 +43,59 @@
     "                V[s] = V[s] + alpha * (G - V[s])\n",
     "    return V\n",
     "\n",
-    "def temporal_difference(policy, alpha, n):\n",
+    "def TDLearning(env, policy, gamma, alpha, num_episodes):\n",
     "    \"\"\"\n",
-    "    alpha: step_size\n",
-    "    n: number of trajectories\n",
+    "    env: OpenAI Gym environment\n",
+    "    policy: Mapping from states to actions\n",
+    "    gamma: discount factor\n",
+    "    alpha: learning rate\n",
+    "    num_episodes: the number of episodes\n",
     "    \"\"\"\n",
-    "    V = defaultdict(int)\n",
-    "    "
+    "    # Initialize value function\n",
+    "    V = np.zeros(env.observation_space.n)\n",
+    "\n",
+    "    for i in range(num_episodes):\n",
+    "        # Reset environment and eligibility traces\n",
+    "        s = env.reset()\n",
+    "\n",
+    "        # Run episode\n",
+    "        done = False\n",
+    "        while not done:\n",
+    "            a = policy[s]\n",
+    "            s_next, r, done, _ = env.step(a)\n",
+    "\n",
+    "            # Compute TD error\n",
+    "            delta = r + gamma * V[s_next] - V[s]\n",
+    "\n",
+    "            # Update value function\n",
+    "            V += alpha * delta \n",
+    "\n",
+    "            s = s_next\n",
+    "\n",
+    "    return V"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
