--- a/Policy & Value iteration/gambler.ipynb
+++ b/Policy & Value iteration/gambler.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Gambler problem:\n",
-    "A gambler has the opportunity to make bets on the outcomes of a sequence of coin flips. If the coin comes up heads, he wins as many dollars as he has staked on that flip; if it is tails, he loses his stake. The game ends when the gambler wins by reaching his goal of \\$100, or loses by running out of money. On each flip, the gambler must decide what portion of his capital to stake, in integer numbers of dollars. Assume discount factor $\\gamma = 1, p_{head} = 0.4$.\n",
+    "A gambler has the opportunity to make bets on the outcomes of a sequence of coin flips. If the coin comes up heads, he wins as many dollars as he has staked on that flip; if it is tails, he loses his stake. The game ends when the gambler wins by reaching his goal of \$100, or loses by running out of money. On each flip, the gambler must decide what portion of his capital to stake, in integer numbers of dollars. Assume discount factor $\gamma = 1, p_{head} = 0.4$.\n",
     "\n",
     "Our MDP can be formulated as follows:\n",
     "<ul>\n",
